fixed spacing on portfolio page

--- a/styles/sass/_media.scss
+++ b/styles/sass/_media.scss
@@ -323,6 +323,10 @@ input[type=checkbox]:checked ~ #overlay-button {
     margin-bottom: 50px;
 }
 
+    .portfolioGallery ul {
+        justify-content: center;
+    }
+
 // ABOUT PAGE --------------------------------------------
 
     .aboutMeMain {
@@ -688,8 +692,10 @@ input[type=checkbox]:checked ~ #overlay-button {
         }
     }
 
-    .project4,
-    .project5 {
+    .project1,
+    .project2,
+    .project3,
+    .project4 {
     margin-bottom: 50px;
 }
 
@@ -869,8 +875,9 @@ input[type=checkbox]:checked ~ #overlay-button {
 
     .project1,
     .project2,
-    .project3 {
-        margin-bottom: 0;
+    .project3,
+    .project4 {
+        margin-bottom: 50px;
 }
 
     .project1,
@@ -886,7 +893,7 @@ input[type=checkbox]:checked ~ #overlay-button {
     }
 
 .portfolioGallery ul {
-	justify-content: center;
+	justify-content: space-around;
 
 }
 
@@ -1026,12 +1033,6 @@ input[type=checkbox]:checked ~ #overlay-button {
 
     .project1,
     .project2,
-    .project3 {
-        margin-bottom: 0;
-}
-
-    .project1,
-    .project2,
     .project3,
     .project4,
     .project5,
@@ -1043,7 +1044,7 @@ input[type=checkbox]:checked ~ #overlay-button {
     }
 
 .portfolioGallery ul {
-	justify-content: center;
+	justify-content: space-around;
 
 }
 
@@ -1124,12 +1125,6 @@ input[type=checkbox]:checked ~ #overlay-button {
 
     .project1,
     .project2,
-    .project3 {
-        margin-bottom: 0;
-}
-
-    .project1,
-    .project2,
     .project3,
     .project4,
     .project5,
@@ -1141,7 +1136,7 @@ input[type=checkbox]:checked ~ #overlay-button {
     }
 
 .portfolioGallery ul {
-	justify-content: center;
+	justify-content: space-between;
 
 }
 
@@ -1223,12 +1218,6 @@ input[type=checkbox]:checked ~ #overlay-button {
 
     .project1,
     .project2,
-    .project3 {
-        margin-bottom: 0;
-}
-
-    .project1,
-    .project2,
     .project3,
     .project4,
     .project5,
@@ -1240,7 +1229,7 @@ input[type=checkbox]:checked ~ #overlay-button {
     }
 
 .portfolioGallery ul {
-	justify-content: center;
+	justify-content: space-between;
 
 }
 
@@ -1321,12 +1310,6 @@ input[type=checkbox]:checked ~ #overlay-button {
 
     .project1,
     .project2,
-    .project3 {
-        margin-bottom: 0;
-}
-
-    .project1,
-    .project2,
     .project3,
     .project4,
     .project5,
@@ -1338,7 +1321,7 @@ input[type=checkbox]:checked ~ #overlay-button {
     }
 
 .portfolioGallery ul {
-	justify-content: center;
+	justify-content: space-between;
 
 }
 
