--- a/styles/sass/_portfolio.scss
+++ b/styles/sass/_portfolio.scss
@@ -38,7 +38,7 @@
 
 .portfolioGallery li {
     position: relative;
-    width: 355px;
+    width: 350px;
 }
 
 .portfolioGallery .row {
